subscriptions.scss, fix overflow-x on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,9 @@ body {
   margin: 0px;
 }
 
+#root {
+  overflow-x: hidden;
+}
 
 h1 {
   font-weight: lighter;
