--- a/src/styles/PredictionListings.scss
+++ b/src/styles/PredictionListings.scss
@@ -17,14 +17,14 @@
 .prediction-listings-container {
   position: fixed;
   width: 100vw;
-  z-index: 2;
+  z-index: 3;
   background-color: #fff;
   color: #222;
   box-shadow: 0px 1px 2px 3px #999;
 
   bottom: -60px;
   transform: bottom 0.3s ease;
-  transition-delay: 0.5s;
+  transition-delay: 0.3s;
 
 	height: 106px;
 
@@ -35,7 +35,7 @@
     margin-right: 2%;
     margin-top: -60px;
     transform: margin-top 0.3s ease;
-    transition-delay: 0.5s;
+    transition-delay: 0.3s;
   }
 
 }
